# BSUIR

./: .gitignore
course-2_semester-1/: ОТИС (1).docx  ОТИС (2).docx  ОТИСЛаба4.docx
course-2_semester-1/MSiSvIT/: app.js  Лукавый & Co проект договора.docx  Метрология 5 вариант 15.docx  Схемка по метре (1).vsdx  Таблички метро 3.xlsx  пз4 метрология.docx  пз6.docx  пз7.docx
course-2_semester-1/MaOsIS/: 1.scs.txt  MOUCLABA-kbe.gwf  MOUCLABA1-kbe.gwf  SC-1.scs  SC.txt  lab_1.gwf  laba3.gwf  mois-laba-2.scs  ЛР_1_оф.gwf
course-2_semester-1/OS/: lab-2-oc.cpp  lab-2.2-oc.cpp  lab-3  lab-3.cpp  lab-4.cpp  lab-5  lab-5.cpp  laba-os-4.docx  laba-os-5.docx  ЛАБА1.txt
course-2_semester-1/OTIS/: otis-laba-5.cpp  Итоговый отчет отис.docx  ОТИС (3).docx  ОТИСЛаба4.docx
course-2_semester-2/AOIS/: main.py
course-2_semester-2/FIL/: Александр Гельевич Дугин.docx  квалиа.docx
course-2_semester-2/MOIS/: READMI.md  laba-1.gwf  laba-2.gwf  laba-3.gwf  new_file (14).gwf
course-2_semester-2/MOIS/lab-4/cxx/segmentInCircumferenceModule/: CMakeLists.txt  segmentInCircumferenceModule.cpp  segmentInCircumferenceModule.hpp
course-2_semester-2/MOIS/lab-4/cxx/segmentInCircumferenceModule/agents/: CalculateSegmentInCircumferenceAgent.cpp  CalculateSegmentInCircumferenceAgent.hpp  TwoChordsAgent.cpp  TwoChordsAgent.hpp
course-2_semester-2/MOIS/lab-4/cxx/segmentInCircumferenceModule/keynodes/: CircumferenceKeynodes.cpp  CircumferenceKeynodes.hpp
course-2_semester-2/MPPiU/: MYShina-Startap-dlya-udobnoj-pokupki-avtomobilej-onlajn.pptx  my-shina.url  (+3 more)
course-3-semester-2/: .gitignore
(+492 files in other folders)
